argo/ingress.yml
kind: Service
apiVersion: v1
metadata:
  name: argocd-proxy
spec:
  ports:
  - protocol: TCP
    port: 443
    targetPort: 443
---
kind: Endpoints
apiVersion: v1
metadata:
  name: argocd-proxy
subsets:
  - addresses:
    - ip: 10.43.251.51
    ports:
    - port: 443
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: argocd
  annotations:
    ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - argocd.jimmyau.dev
    secretName: jimmyau-dev-tls
  rules:
  - host: argocd.jimmyau.dev
    http:
      paths:
      - backend:
          serviceName: argocd-proxy
          servicePort: 443
